fixed detailpage overflowing issue

--- a/frontend/src/containers/SideBar/SideBar.css
+++ b/frontend/src/containers/SideBar/SideBar.css
@@ -5,6 +5,7 @@
   box-shadow: 5px 0px 15px rgba(0,0,0,0.4);
   float: left;
   position: fixed;
+  z-index: 20;
 }
 .SideBar .tab {
   width: 100%;
